<resources>
    <string name="app_name">COMP304_TeamProject</string>
    <array name="functions">
        <item>BMI Calculator</item>
        <item>Map</item>
        <item>Daily Calorie Intake</item>
    </array>
    <string name="title_activity_maps">Map</string>

    <!-- calorie intake -->
    <string name="calorieIntakeTitle">Daily Calorie Intake Calculator</string>
    <string name="age">Age: </string>
    <string name="gender">Gender: </string>
    <string name="gender_Male">Male</string>
    <string name="gender_Female">Female</string>
    <string name="weight">Weight: </string>
    <string name="weight_Pounds">Pounds</string>
    <string name="weight_Kilo">Kilograms</string>
    <string name="height">Height: </string>
    <string name="height_Metric">cm</string>
    <string name="height_Imperial">Feet and Inches</string>
    <string name="height_Imperial_Feet">Feet:</string>
    <string name="height_Imperial_Inch">Inches:</string>
    <string name="exerciseLevel">Exercise Routine: </string>
    <string name="calculate">Calculate Calories</string>
    <string name="resetButton">Reset</string>
    <string name="maintainWeight">Maintain Current Weight: </string>
    <string name="weightLoss">Weight Loss Calorie Count: </string>

    <string name="bmi_title">Body Mass Index Calculator</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="bmi_height_metric">Height (cm)</string>
    <string name="bmi_height_imperial">Height (ft and in)</string>
    <string name="bmi_weight_metric">Weight (kg)</string>
    <string name="bmi_weight_imperial">Weight (lbs)</string>
    <string name="bmi_calculate">Calculate BMI</string>


    <dimen name="font_title">25sp</dimen>
    <dimen name="font_other">20sp</dimen>
    <dimen name="dimen_10dp">10dp</dimen>

    <array name="spinner_CalorieIntake">
        <item>Daily</item>
        <item>More than 5 times per week</item>
        <item>Less then 4 times per week</item>
        <item>Little / No Exercise</item>
    </array>
</resources>
