<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalorieIntakeActivity">


<LinearLayout
    android:id="@+id/layout_Input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calorieIntakeTitle"
        android:textAlignment="center"
        android:textSize="@dimen/font_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:paddingBottom="@dimen/dimen_10dp"/>

    <EditText
        android:id="@+id/editText_Age"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        android:inputType="number"
        android:maxLength="3"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:paddingBottom="@dimen/dimen_10dp"
        android:textSize="@dimen/font_other"/>

    <RadioGroup
        android:id="@+id/gender_Group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/gender_Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/gender_Male"/>

        <RadioButton
            android:id="@+id/gender_Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_Female"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:paddingBottom="@dimen/dimen_10dp"
        android:textSize="@dimen/font_other"/>

    <RadioGroup
        android:id="@+id/weight_Unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/weight_Pounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/weight_Pounds"/>

        <RadioButton
            android:id="@+id/weight_Kilo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_Kilo"/>

    </RadioGroup>

    <EditText
        android:id="@+id/editText_Weight"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        android:inputType="number"
        android:maxLength="3"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:paddingBottom="@dimen/dimen_10dp"
        android:textSize="@dimen/font_other"/>

    <RadioGroup
        android:id="@+id/height_Type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/height_Metric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/height_Metric"/>

        <RadioButton
            android:id="@+id/height_Imperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_Imperial"/>

    </RadioGroup>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/heightText_Metric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_Metric"
        android:visibility="visible"
        android:layout_marginRight="@dimen/dimen_10dp"
        />

    <EditText
        android:id="@+id/editText_Height_Metric"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        android:inputType="number"
        android:visibility="visible"
        android:maxLength="3"
        />

    <TextView
        android:id="@+id/heightText_Feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:text="@string/height_Imperial_Feet"
        android:visibility="gone"
        />
    <EditText
        android:id="@+id/editText_Height_Imperial_Feet"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        android:inputType="number"
        android:visibility="gone"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:maxLength="3"/>

    <TextView
        android:id="@+id/heightText_Inch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:text="@string/height_Imperial_Inch"
        android:visibility="gone"
        />
    <EditText
        android:id="@+id/editText_Height_Imperial_Inch"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        android:inputType="number"
        android:visibility="gone"
        android:maxLength="3"/>
</LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exerciseLevel"
        android:textSize="@dimen/font_other"/>

    <Spinner
        android:id="@+id/spinner_ExerciseRoutine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        />

    <Button
        android:id="@+id/calculate_Calories"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_gravity="center"
        android:text="@string/calculate"
        android:background="@color/colorGrey"
        />

    <TextView
        android:id="@+id/text_MaintainWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:textSize="@dimen/font_other"
        android:text="@string/maintainWeight"/>

    <TextView
        android:id="@+id/text_WeightLoss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:textSize="@dimen/font_other"
        android:text="@string/weightLoss"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetButton"
        android:onClick="Reset"/>

</LinearLayout>


</LinearLayout>